--- a/css/linechart.css
+++ b/css/linechart.css
@@ -14,6 +14,19 @@
     width: 100%;
     overflow: visible;
 }
+.brush-tooltip {
+    position: absolute;
+    pointer-events: none;  /* Tooltip won't capture mouse events */
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+    font-family: Arial, sans-serif;
+    font-size: 22px;
+    display: none;  /* Tooltip is hidden initially */
+    transition: opacity 0.2s;  /* Smooth transition for appearance */
+}
+
 
 .hidden-ticks .tick text {
     display: none;
