Improved layout and map blurred tiles

--- a/css/filters.css
+++ b/css/filters.css
@@ -35,13 +35,13 @@
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center items horizontally */
     justify-content: center; /* Center items vertically */
-    min-width: 300px;
+    /* min-width: 300px; */
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border: 1px solid #333;
-    width: 100%;
+    /* width: 100%; */
 }
 
 
@@ -236,21 +236,17 @@
 
 .active-filters {
     flex: 1 100%;
-    /* margin-top: 0px; */
     margin: 5px;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 90%;
-    /* border: 1px solid #333; */
 }
 
 .filterBox {
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* border: 1px solid #333; */
-    /* margin: 3px; */
     padding: 20px;
     margin: 5px;
     width: 90%;
@@ -264,7 +260,6 @@
     color: #333;
 }
 
-/* Paragraphs within active filters section */
 .active-filters p {
     margin: 5px 0;
     color: #555;
@@ -273,19 +268,8 @@
 
 .active-time-filter {
     font-weight: bold;
-    color: #0d2d4d; /* Customize the color as needed */
+    color: #0d2d4d;
 }
-
-/* .active-tag {
-    background-color: #4fb13f;
-    color: rgb(0, 0, 0);
-    padding: 5px 10px;
-    border-radius: 20px;
-    display: inline-block;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    font-size: 0.85em;
-} */
 
 .active-tag {
     position: relative;
@@ -316,6 +300,8 @@
 .active-tag:hover .remove {
     display: block;
 }
+
+/*Event type search*/
 
 #event-type-search {
     padding: 10px;
@@ -349,6 +335,6 @@
 } 
 
 .filterHeader{
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bold;
 }
