--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* Basic Reset and Body Styling */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
@@ -9,7 +10,7 @@ body {
     height: 100vh;
 }
 
-
+/* Main Container */
 .main-container {
     display: flex;
     flex-direction: column;
@@ -18,82 +19,44 @@ body {
     width: 100%;
 }
 
-.top-panel {
-    text-align: center;
-    padding: 0px;
-    background-color: #c9c9c9;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    margin: 5px;
-    margin-top: 0px;
-    width: 100%;
-}
-
-.top-panel h1 {
-    margin: 0px;
-    padding: 10px;
-    font-size: 1.5em;
-    font-weight: 600;
-    color: #2a2a2a;
-}
-
+/* Main Content Container */
 .container {
     display: flex;
-    width: 100%;
-    height: 100%;
+    
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
-    overflow: hidden;
+    overflow: none;
 }
 
+/* Column Layout */
 .column {
     display: flex;
     flex-direction: column;
 }
 
-.column-1 {
-    flex: 3;
-}
+.column-1 { flex: 3; } /* Narrow Column */
+.column-2 { flex: 7; } /* Wide Column */
 
-.column-2 {
-    flex: 7;
-}
+/* Column-1 Content */
+.column-1 .data-filters { flex: 5;}
+.column-1 .table-row { flex: 5;}
 
-.column-1 .data-filters {
-    flex: 7;
-}
-
-.column-2 .table-row {
-    flex: 3;
-}
-
-.column-2 .row-1 {
-    flex: 2;
-    padding: 20px;
-}
-
+/* Column-2 Content */
+.column-2 .row-1, 
 .column-2 .row-2 {
-    flex: 8;
     padding: 20px;
 }
+.column-2 .row-1 { flex: 2;}
+.column-2 .row-2 { flex: 8;}
 
-
-.row-2 {
+/* Row Layout for Flexible Positioning */
+.row-1, .row-2 {
     display: flex;
     flex-direction: column;
-    /* Change flex-direction to column */
-    justify-content: flex-start;
-    /* Align items to start from the top */
+    justify-content: flex-start; /* Align items to start from the top */
 }
 
-.row-1 {
-    display: flex;
-    flex-direction: column;
-    /* Change flex-direction to column */
-    justify-content: flex-start;
-    /* Align items to start from the top */
-}
-
+/* General Row Styling */
 .row {
     display: flex;
     justify-content: center;
