--- a/css/mapStyle.css
+++ b/css/mapStyle.css
@@ -25,7 +25,7 @@ svg {
 path:hover {
     /* fill: rgba(255, 193, 7, 0.7); */
     /* increase the brightness */
-    filter: brightness(1.3);
+    /* filter: brightness(1.3); */
 }
 
 polygon {
