--- a/css/filters.css
+++ b/css/filters.css
@@ -16,9 +16,9 @@
     justify-content: center;
     flex: 1;
     min-width: 300px;
-    padding: 20px;
+    padding: 0px;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 0px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border: 1px solid #333;
     width: 100%;
@@ -30,9 +30,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 0px;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 0px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border: 1px solid #333;
     width: 100%;
@@ -223,7 +223,7 @@
 .active-filters {
     flex: 1 100%;
     margin: 5px;
-    padding: 20px;
+    padding: 0px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -323,4 +323,5 @@
 .filterHeader {
     font-size: 1.2em;
     font-weight: bold;
+    margin: 5px;
 }
