--- a/css/colors.css
+++ b/css/colors.css
@@ -3,10 +3,6 @@ body {
     background-color: #eaeaea;
 }
 
-/* Color for gap in filters */
-.row {
-    background-color: #c4c4c4;
-}
 
 table tbody tr:nth-of-type(odd) {
     background-color: #969696;
@@ -14,4 +10,8 @@ table tbody tr:nth-of-type(odd) {
 
 table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
+}
+
+.firstTR {
+    background-color: rgb(35, 126, 50);
 }
