--- a/css/colors.css
+++ b/css/colors.css
@@ -3,40 +3,47 @@ body {
     background-color: #eaeaea;
 }
 
-
+/* Color of table odd rows */
 table tbody tr:nth-of-type(odd) {
     background-color: #969696;
 }
 
+/* Color of table even rows */
 table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
 }
 
+/* Header for the table, column sorting */
 .firstTR {
     background-color: rgb(35, 126, 50);
 }
 
+/* Color of highlight around the point */
 .highlighted.point{
     stroke-width: 2px;
     stroke: #a7e337;
 }
 
+/* Color of table row highlight when point is selected */
 table tbody tr.highlighted {
     background-color: rgb(236, 236, 88) !important; /* Ensures the highlighted color overrides other styles */
 }
 
+/* Color of the fill for the bins for highlighted data*/
 .new-data-highlight {
     fill: #29f516;
     stroke: none;
     fill-opacity: 0.8;
 }
 
+/* Color of the fill for the bins for highlighted data in subcharts */
 .new-data-highlight-subchart {
     fill: #29f516;
     stroke: none;
     fill-opacity: 0.8;
 }
 
+/* Color of the selection rectangle in the main linechart */
 .selection-rectangle
 {
     fill: #e5f0ff48;
@@ -46,7 +53,7 @@ table tbody tr.highlighted {
     z-index: 1;
 }
 
-
+/* Color of the selection rectangle in the sublinechart */
 .selection-rectangle-subchart
 {
     fill: #e5f0ff48;
@@ -69,12 +76,14 @@ table tbody tr.highlighted {
 /* Tool tip for selection */
 .brush-tooltip {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 5px;
-    border-radius: 3px;
-    font-family: Arial, sans-serif;
-    font-size: 22px;
-    display: none;  /* Tooltip is hidden initially */
-    transition: opacity 0.2s;  /* Smooth transition for appearance */
+    background-color: rgba(50, 50, 50, 0.9); 
+    color: #fff; 
+    padding: 4px 8px;
+    border-radius: 4px; 
+    font-family: 'Arial', sans-serif;
+    font-size: 14px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    display: none;  
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+    transform: translateY(-5px);
 }
