Added cache, better code clarity

--- a/css/colors.css
+++ b/css/colors.css
@@ -31,10 +31,10 @@ table tbody tr:nth-of-type(even) {
     stroke-width: 2px;
     stroke: #FF0; /*rgb(217, 0, 255)*/
     /* Filter makes the app slow */
-    /* filter: 
-        drop-shadow(0 0 5px rgba(255, 255, 0, 0.5));*/
-        /*drop-shadow(0 0 10px rgba(255, 255, 0, 0.3))
-        drop-shadow(0 0 15px rgba(255, 255, 0, 0.2));*/
+     filter: 
+        drop-shadow(0 0 5px rgba(255, 255, 0, 0.5));
+        drop-shadow(0 0 10px rgba(255, 255, 0, 0.3))
+        drop-shadow(0 0 15px rgba(255, 255, 0, 0.2));
 }
 
 /* Color of table row highlight when point is selected */
